# atom-intents

./: .gcloudignore  .gitignore  AUDIT_REPORT.md  CHANNEL_REGISTRY_USAGE.md  Cargo.toml  PRODUCTION_READINESS_REVIEW.md  README.md  SECURITY_FIX_SIGNING_HASH.md  SECURITY_REVIEW_COMPREHENSIVE.md
config/: local.toml  mainnet.toml  testnet.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/escrow/tests/: adversarial_escrow_tests.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: contract.rs  error.rs  handlers.rs  helpers.rs  lib.rs  msg.rs  queries.rs  state.rs
contracts/settlement/tests/: adversarial_settlement_tests.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: config.rs  lib.rs  loader.rs  validation.rs  watcher.rs
crates/config/tests/: integration_tests.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/src/: book.rs  engine.rs  error.rs  lib.rs
crates/matching-engine/tests/: adversarial_matching_tests.rs
crates/metrics/: Cargo.toml  README.md  alert-rules.yml  grafana-dashboard.json
crates/metrics/src/: collector.rs  http.rs  lib.rs  metrics.rs  tracing.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: executor.rs  lib.rs  orchestrator.rs  recovery.rs  simple_tests.rs  tests.rs  upgrade.rs  validator.rs
crates/ratelimit/: Cargo.toml
crates/ratelimit/src/: backoff.rs  backpressure.rs  circuit_breaker.rs  lib.rs  limiter.rs
crates/relayer/: Cargo.toml
crates/relayer/src/: chain.rs  grpc.rs  lib.rs  priority.rs  service.rs
crates/relayer/tests/: adversarial_ibc_tests.rs
crates/settlement/: Cargo.toml  PERSISTENCE.md  ROUTING.md
crates/settlement/examples/: persistence_demo.rs  routing_demo.rs
crates/settlement/migrations/: 001_create_settlements.sql  002_create_transitions.sql  003_create_upgrade_tracking.sql
crates/settlement/src/: channels.rs  error.rs  ibc.rs  lib.rs  manager.rs  routing.rs  sqlite_store.rs  store.rs  two_phase.rs
crates/solver/: Cargo.toml
crates/solver/src/: aggregator.rs  astroport.rs  cex.rs  denom.rs  dex.rs  error.rs  fees.rs  lib.rs  oracle.rs  osmosis.rs  reputation.rs  skipgo.rs  traits.rs
crates/types/: Cargo.toml
crates/types/src/: asset.rs  bond.rs  cancellation.rs  execution.rs  fill.rs  intent.rs  lib.rs  solution.rs  trading.rs  verification.rs
crates/types/tests/: adversarial_signature_tests.rs  signature_verification_tests.rs  signing_hash_security_tests.rs
demo/: BENCHMARKS.md  EVALUATION_GUIDE.md  README.md
demo/docker/: Dockerfile.skip-select  Dockerfile.web-ui  docker-compose.yml  nginx.conf  prometheus.yml
demo/docker/scripts/: cleanup.sh  start.sh  stop.sh
demo/gcloud/: deploy.sh  setup.sh
demo/gcloud/k8s/: ingress.yaml  namespace.yaml  skip-select.yaml  web-ui.yaml
demo/gcloud/terraform/: main.tf  terraform.tfvars.example  variables.tf
demo/gcp/: README.md  cloudbuild.yaml
demo/gcp/k8s/: configmap.yaml  ingress.yaml  monitoring-base.yaml  monitoring-prometheus.yaml  monitoring.yaml  secrets.yaml.template  skip-select-deployment.yaml  testnet-config.yaml  web-ui-deployment.yaml
demo/gcp/scripts/: deploy.sh
demo/gcp/terraform/: main.tf  terraform.tfvars.example
demo/localnet/: README.md  docker-compose.yml  reset.sh  run-full-demo.sh  start.sh  stop.sh
demo/localnet/hermes/: config.toml
demo/localnet/scripts/: balances.sh  deploy-contracts.sh  ibc-transfer.sh
demo/simulation/: README.md  config.yaml  intent_generator.py  load_tester.py
demo/skip-select-simulator/: Cargo.toml  Dockerfile
demo/skip-select-simulator/config/: testnet.toml
demo/skip-select-simulator/docs/: TESTNET_INTEGRATION_PLAN.md
demo/skip-select-simulator/examples/: generate_wallet.rs
demo/skip-select-simulator/migrations/: 001_initial_schema.sql
demo/skip-select-simulator/scripts/: generate-wallet.sh  start-localnet.sh  start-testnet.sh
demo/skip-select-simulator/src/: api.rs  auction.rs  db.rs  main.rs  models.rs  oracle.rs  security.rs  settlement.rs  solver.rs  state.rs  websocket.rs
demo/skip-select-simulator/src/backend/: config.rs  grpc_client.rs  mod.rs  simulated.rs  testnet.rs  tx_builder.rs  wallet.rs
demo/testnet/: DEPLOYMENT.md  README.md  deploy-contracts.sh  request-tokens.sh  run-demo.sh  testnet.env.example
demo/testnet/deployments/: osmo-test-5_20251230_112213.json  pion-1_20251228_021436.json  provider_20251228_015050.json
demo/web-ui/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
demo/web-ui/src/: App.tsx  index.css  main.tsx
demo/web-ui/src/components/: AuctionView.tsx  CostCalculator.tsx  Dashboard.tsx  DemoScenarios.tsx  ExecutionTimeline.tsx  IntentCreator.tsx  OnboardingWizard.tsx  PriceComparison.tsx  SettlementMonitor.tsx  SolverDashboard.tsx  WalletConnect.tsx
demo/web-ui/src/config/: chains.ts
demo/web-ui/src/hooks/: useStore.ts  useWallet.ts  useWebSocket.ts
demo/web-ui/src/services/: api.ts  cosmos.ts
demo/web-ui/src/types/: index.ts  keplr.ts
demo/web-ui/src/utils/: errors.ts
docs/: ESCROW_SETTLEMENT_FLOW.md  OPERATIONS_GUIDE.md  SPECIFICATION.md  TIA_USDC_SWAP_SPECIFICATION.md  UPGRADE_SYSTEM_DESIGN.md
docs/plans/: 2025-12-25-solver-competition-design.md  2026-01-03-solver-bond-redesign.md
tests/: adversarial_economic_tests.rs  integration_test.rs
