[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/solver",
    "crates/matching-engine",
    "crates/settlement",
    "crates/relayer",
    "crates/orchestrator",
    "crates/ratelimit",
    "crates/metrics",
    "crates/config",
    "contracts/escrow",
    "contracts/settlement",
]

[package]
name = "atom-intents"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iqlusioninc/atom-intents"
authors = ["Iqlusion Inc."]

[dependencies]
atom-intents-types = { workspace = true }
atom-intents-matching-engine = { workspace = true }
atom-intents-settlement = { workspace = true }
atom-intents-solver = { workspace = true }
async-trait = { workspace = true }
cosmwasm-std = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iqlusioninc/atom-intents"
authors = ["Iqlusion Inc."]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cosmos/CosmWasm
cosmwasm-std = { version = "2.2", features = ["stargate"] }
cosmwasm-schema = "2.2"
cw-storage-plus = "2.0"

# Crypto
sha2 = "0.10"
ed25519-dalek = "2.0"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }

# Numeric
rust_decimal = { version = "1.0", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
atom-intents-types = { path = "crates/types" }
atom-intents-solver = { path = "crates/solver" }
atom-intents-matching-engine = { path = "crates/matching-engine" }
atom-intents-settlement = { path = "crates/settlement" }
atom-intents-relayer = { path = "crates/relayer" }
atom-intents-orchestrator = { path = "crates/orchestrator" }
atom-intents-ratelimit = { path = "crates/ratelimit" }
atom-intents-metrics = { path = "crates/metrics" }
atom-intents-config = { path = "crates/config" }
