[package]
name = "atom-intents-matching-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Order book and matching engine for ATOM Intent-Based Liquidity System"

[dependencies]
atom-intents-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
cosmwasm-std = { workspace = true }
rust_decimal = { workspace = true }
