[package]
name = "atom-intents-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Solver framework for ATOM Intent-Based Liquidity System"

[dependencies]
atom-intents-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
cosmwasm-std = { workspace = true }
rust_decimal = { workspace = true }
