[package]
name = "skip-select-simulator"
version = "0.1.0"
edition = "2021"
description = "Simplified Skip Select coordination layer for ATOM Intents demo"
license = "Apache-2.0"

[workspace]

[features]
default = ["memory"]
memory = []  # In-memory storage (default for local dev)
postgres = ["sqlx"]  # PostgreSQL storage (for production)

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"

# Crypto
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.21"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
bech32 = "0.11"
ripemd = "0.1"

# Cosmos SDK protobuf types
prost = "0.12"
cosmos-sdk-proto = { version = "0.21", features = ["cosmwasm", "grpc"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client (for price feeds and chain RPC)
reqwest = { version = "0.11", features = ["json"] }

# Database (optional for production)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }

# Redis for rate limiting and caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Rate limiting
governor = "0.6"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Security
jsonwebtoken = "9"
argon2 = "0.5"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "skip-select-simulator"
path = "src/main.rs"
